@@ -1,3 +1,7 @@
+2015-05-05  Peter Breitenlohner  <peb@mppmu.mpg.de>
+
+	* XeTeX_ext.c: Can not use non-locking getc() for MinGW.
+
 2015-05-03  Jonathan Kew  <jfkthame@gmail.com>
 
 	* XeTeX_ext.c: use non-locking getc() for faster file reading.
